countrypage extends base template

--- a/dominion/templates/_base.html
+++ b/dominion/templates/_base.html
@@ -7,14 +7,31 @@
 <link
     href="https://fonts.googleapis.com/css?family=Lora:400,700|Montserrat:200,300,400,500,600,700,800,900"
     rel="stylesheet"
-/>
+  />
+  {% block head_css_extra %}
+  <link rel="stylesheet" href="{% static 'css/vendor/leaflet-0.6.4.css' %}" />
+  <!--[if lte IE 8]>
+      <link rel="stylesheet" href="{% static 'css/vendor/leaflet-0.6.4.ie.css' %}" />
+  <![endif]-->
+  <link href="{% static 'css/vendor/leaflet.label.css' %}" rel="stylesheet" />
+  {% endblock %}
 {% endblock %}
 
 {% block body_javascript %}
   <script src="{% static asset_manifest.runtime %}"></script>
   <script src="{% static asset_manifest.vendor %}"></script>
   <script src="{% static asset_manifest.main %}"></script>
+
+  {% block homepage_javascripb_libs %}
+    <script src="{% static 'js/vendor/leaflet-0.6.4.js' %}"></script>
+    <script src="{% static 'js/vendor/topojson.v1.min.js' %}"></script>
+    <script src="{% static 'js/vendor/leaflet.label.js' %}"></script>
+    <script src="{% static 'js/map_mapit.js' %}"></script>
+    <script src="{% static 'js/profile_map_mapit.js' %}"></script>
+  {% endblock %}
+
   {{ block.super }}
+
   <!-- IMG to SVG -->
   <script type="text/javascript">
     document.addEventListener('DOMContentLoaded', function () {
