[dominion] initial releases section

--- a/dominion/templates/profile/profile_detail.html
+++ b/dominion/templates/profile/profile_detail.html
@@ -10,6 +10,7 @@
 {% block profile_detail %}
   <div id="profile-detail">
     <div id="dominionProfileTabs" />
+    <div id="dominionProfileReleasesSection" />
 
     {% block profile_detail_contents %}
     {% endblock %}
