[dominion] link style + fix populate dummy data

--- a/dominion/templates/profile/profile_detail.html
+++ b/dominion/templates/profile/profile_detail.html
@@ -19,5 +19,7 @@
 
 {% block body_javascript_extra %}
     {{ block.super }}
-    var dataset_releases = [2016];
+    <script>
+        var dataset_releases = [2016];
+    </script>
 {% endblock %}
