--- a/dominion/static/css/dominion.scss
+++ b/dominion/static/css/dominion.scss
@@ -379,5 +379,12 @@ input[type="text"] {
 
 // Map attribution
 .leaflet-container a {
-    color: grey !important; 
+    color: grey !important;
+}
+
+#slippy-map {
+    display: block;
+    width: 100%;
+    height: auto;
+    position: relative;
 }
