[dominion] update releases title

--- a/dominion/templates/profile/profile_detail.html
+++ b/dominion/templates/profile/profile_detail.html
@@ -22,5 +22,6 @@
     <script>
         var dataset_releases = profileData["primary_releases"]["other"];
         dataset_releases.push(profileData["primary_releases"]["active"]);
+        var current_dataset = rofileData["primary_releases"]["active"];
     </script>
 {% endblock %}
