--- a/dominion/templates/profile/profile_detail.html
+++ b/dominion/templates/profile/profile_detail.html
@@ -20,8 +20,7 @@
 {% block body_javascript_extra %}
     {{ block.super }}
     <script>
-        var dataset_releases = profileData["primary_releases"]["other"];
-        dataset_releases.push(profileData["primary_releases"]["active"]);
-        var current_dataset = rofileData["primary_releases"]["active"];
+        var current_dataset = profileData["primary_releases"]["active"];
+        var dataset_releases = profileData["primary_releases"]["other"].concat(current_dataset);
     </script>
 {% endblock %}
