move head css extra to country page

--- a/dominion/templates/country_page.html
+++ b/dominion/templates/country_page.html
@@ -4,6 +4,14 @@
 {{ HURUMAP.name }}: Who owns land in {{country.name}}
 {% endblock %}
 
+{% block head_css_extra %}
+  <link rel="stylesheet" href="{% static 'css/vendor/leaflet-0.6.4.css' %}" />
+  <!--[if lte IE 8]>
+      <link rel="stylesheet" href="{% static 'css/vendor/leaflet-0.6.4.ie.css' %}" />
+  <![endif]-->
+  <link href="{% static 'css/vendor/leaflet.label.css' %}" rel="stylesheet" />
+  {% endblock %}
+
 {% block head_meta_description %}
 {{ HURUMAP.name }} provides useful facts and data about land ownership in {{country.name}}.
 Compare places using tables and maps, download data, and embed charts on your site.
