[Dominion] Profile Releases Section (#161)
* [dominion] initial releases section

* [dominion] added releases menu

* [dominion] dummy releases data

* [dominion] link style + fix populate dummy data

* [dominion] fix releases and onclick direct to release

* [dominion] dropdown of releases

* [dominion] update releases title

* take measures to avoid profileData[primary_releases][other] mutation

* use A module

--- a/dominion/templates/profile/profile_detail.html
+++ b/dominion/templates/profile/profile_detail.html
@@ -10,9 +10,17 @@
 {% block profile_detail %}
   <div id="profile-detail">
     <div id="dominionProfileTabs" />
-
     {% block profile_detail_contents %}
     {% endblock %}
-  </div
+  </div>
+  <div id="dominionProfileReleasesSection" />
+{% endblock %}
 
+
+{% block body_javascript_extra %}
+    {{ block.super }}
+    <script>
+        var current_dataset = profileData["primary_releases"]["active"];
+        var dataset_releases = profileData["primary_releases"]["other"].concat(current_dataset);
+    </script>
 {% endblock %}
