Add forgotten profile_detail.html

--- a/dominion/templates/profile/profile_detail.html
+++ b/dominion/templates/profile/profile_detail.html
@@ -20,7 +20,7 @@
 {% block body_javascript_extra %}
     {{ block.super }}
     <script>
-        var current_dataset = profileData["primary_releases"]["active"];
-        var dataset_releases = profileData["primary_releases"]["other"].concat(current_dataset);
+        var active_dataset_release = profileData["primary_releases"]["active"];
+        var dataset_releases = profileData["primary_releases"]["other"].concat(active_dataset_release);
     </script>
 {% endblock %}
