add data population for South Africa & Kenya

--- a/dominion/templates/profile/profile_detail.html
+++ b/dominion/templates/profile/profile_detail.html
@@ -9,10 +9,11 @@
 
 {% block profile_detail %}
   <div id="profile-detail">
+    <div>{{ demographics.total_population.values.this }}</div>
     <div id="dominionProfileTabs" />
 
     {% block profile_detail_contents %}
     {% endblock %}
-  </div
+  </div>
 
 {% endblock %}
