geo comparison edit

--- a/dominion/templates/settings_js.html
+++ b/dominion/templates/settings_js.html
@@ -9,7 +9,12 @@
   {% endif %}
   var geography = {{ geography.this |jsonify|safe }};
   var all_countries = Object.entries({{ HURUMAP.countries | jsonify| safe }});
-  var selected_country = all_countries.find((item) => item[1].code === geography.geo_code.slice(0,2))[1];
+  var head2head = "{{ head2head }}";
+  var selected_country;
+  if(geography) {
+    selected_country = all_countries.find((item) => item[1].code === geography.geo_code.slice(0,2))[1];
+  }
+  console.log(profileDataJson)
   {% if country %}
     selected_country = {{ country|jsonify|safe}}
   {% endif %}
