--- a/dominion/static/css/dominion.scss
+++ b/dominion/static/css/dominion.scss
@@ -381,3 +381,16 @@ input[type="text"] {
 .leaflet-container a {
     color: grey !important;
 }
+html {
+    background-color: unset;
+}
+.head2head-wrapper {
+    background-image: url('/static/img/background.png');
+    background-color: unset;
+    padding: 26px 140px;
+}
+
+.profile-head2head-view .frame-right {
+    border-left: 5px solid;
+    border-color: unset;
+}
