--- a/dominion/templates/profile/head2head.html
+++ b/dominion/templates/profile/head2head.html
@@ -25,6 +25,7 @@
 
     <div class="clear"></div>
 </div>
+<div id="dominionProfileReleasesSection"></div>
 {% include 'blocks/country_partners.html' %}
 {% include 'blocks/partners.html' %}
 
