--- a/dominion/templates/profile/profile_detail.html
+++ b/dominion/templates/profile/profile_detail.html
@@ -13,6 +13,7 @@
     {% block profile_detail_contents %}
     {% endblock %}
   </div>
-
+  {% if not head2head %}
   <div id="dominionProfileReleasesSection" />
+  {% endif %}
 {% endblock %}
