html/scss fixes

--- a/dominion/static/css/dominion.scss
+++ b/dominion/static/css/dominion.scss
@@ -162,6 +162,12 @@ span.img-bg {
     padding-top: 0;
 }
 
+// Profile page
+
+#profile .content-container {
+    padding-top: 0;
+}
+
 // Map Explainer; floating box
 .map-explainer-wrapper {
   position: absolute;
