--- a/dominion/templates/profile/profile_detail.html
+++ b/dominion/templates/profile/profile_detail.html
@@ -16,7 +16,7 @@
 
   {% if not head2head %}
     <div id="dominionProfileReleasesSection" />
-  {% endif %
+  {% endif %}
   {% include 'blocks/country_partners.html' %}
   {% include 'blocks/partners.html' %}
 {% endblock %}
