--- a/dominion/templates/settings_js.html
+++ b/dominion/templates/settings_js.html
@@ -16,5 +16,7 @@
     selected_country = {{ country|jsonify|safe}}
   {% endif %}
   var head2head = {{ head2head |jsonify | safe }};
-  console.log( {{primary_releases}} )
+  {% if compare_primary_releases %}
+    profileDataJson.primary_releases = {{compare_primary_releases | jsonify | safe }}
+  {% endif %}
 {% endblock settings_javascript %}
