--- a/dominion/static/css/dominion.scss
+++ b/dominion/static/css/dominion.scss
@@ -383,6 +383,7 @@ input[type="text"] {
 }
 #profile .content-container {
   padding: 0;
+  background-color: #f1f1ed;
 }
 html {
     background-color: unset;
@@ -396,4 +397,24 @@ html {
 .profile-head2head-view .frame-right {
     border-left: 5px solid;
     border-color: unset;
+}
+#profile-detail {
+  margin:0 120px;
+  padding-top: 50px;
+}
+article {
+  margin-bottom: 3em;
+}
+article .section-container {
+  border: 0;
+  margin-left: 0;
+  padding: 3em 2em;
+}
+.profile-detail-header{
+  color: #2c2c2a;
+  font-size: 24px;
+  font-family: 'Montserrat';
+}
+.stat-row {
+  border: 0;
 }
