changes profile and land file

--- a/dominion/templates/profile/profile_detail.html
+++ b/dominion/templates/profile/profile_detail.html
@@ -457,8 +457,6 @@
           <div class="section-container">
             <h1 class="profile-detail-header">Sectional Title Land</h1>
             <div>
-              <br/>
-              <br/>
               Sectional Title Land: Separate ownership of units or sections
               within
               a complex or
@@ -484,11 +482,11 @@
             </section>
 
             <section class="clearfix stat-row">
-              <aside style="font-size: 14px;margin-left:-16.4em;width:14.4em;">
+              <div>
                 Trusts in terms of Trust Property Control Act, No 57 of 1988
                 <a href="http://www.justice.gov.za/legislation/acts/1988-57.pdf">the
                   Trust Act</a>
-              </aside>
+              </div>
               <div class="column-half">
                 <div id="chart-pie-sectionaltitleland-sectional_title_ownership_in_hectares_per_race"
                      data-stat-type="scaled-percentage"
@@ -553,14 +551,14 @@
             <section class="clearfix stat-row">
               <h2 class="header-for-columns"><a class="permalink"> Land
                 Redistribution Programme <i class="fa fa-link"></i></a></h2>
-              <aside style="font-size: 14px;margin-left:-16.4em;width:14.4em;">
+              <div>
                 <br/>
                 Following centuries of colonial rule and decades of apartheid rule,
                 democratic South Africa set out to redistribute rights in land as a
                 way
                 to remedy past racial injustice and lay the basis for more equitable
                 development.
-              </aside>
+              </div>
               <div class="column-third">
                 {% include 'profile/_blocks/_stat_list.html' with stat=redistributionandrestitution.hectarestransferredperprovincebyyear_stat stat_type='number' decimals="-2" %}
               </div>
@@ -673,12 +671,12 @@
             <section class="clearfix stat-row">
               <h2 class="header-for-columns"><a class="permalink"> Land Restitution
                 Programme <i class="fa fa-link"></i></a></h2>
-              <aside style="font-size: 14px;margin-left:-16.4em;width:14.4em;">
+              <div>
                 <br/>
                 Restitution of Land Rights is to offer a solution to people who had
                 lost their land as a result of racially discriminatory practices
                 such as forced removals.
-              </aside>
+              </div>
               <div class="column-third">
                 {% include 'profile/_blocks/_stat_list.html' with stat=redistributionandrestitution.hectaresacquiredrestitution_stat stat_type='number' decimals="-2" %}
               </div>
