--- a/dominion/templates/profile/profile_detail.html
+++ b/dominion/templates/profile/profile_detail.html
@@ -161,26 +161,30 @@
               <section class="clearfix stat-row">
                 <h2>Number of transaction of colour in 12 months for Government Agriculture, Government Urban, Private and Others</h2>
                 <div class="column-half">
-                  <div id="chart-grouped_column-landsalescolour-landsalescolourtransactionpermonthbreakdowngu"
+                  <div id="chart-column-landsalescolour-landsalescolourtransactionpermonthbreakdowngu"
                        data-stat-type="number"
+                       data-chart-title="Government Urban"
                        data-source-title="AGRIDS, 2018"
                        data-source-link="http://land.agrids.co.za/"></div>
                 </div>
                 <div class="column-half">
-                  <div id="chart-grouped_column-landsalescolour-landsalescolourtransactionpermonthbreakdownpr"
+                  <div id="chart-column-landsalescolour-landsalescolourtransactionpermonthbreakdownpr"
                        data-stat-type="number"
+                       data-chart-title="Private"
                        data-source-title="AGRIDS, 2018"
                        data-source-link="http://land.agrids.co.za/"></div>
                 </div>
                 <div class="column-half">
-                  <div id="chart-grouped_column-landsalescolour-landsalescolourtransactionpermonthbreakdownot"
+                  <div id="chart-column-landsalescolour-landsalescolourtransactionpermonthbreakdownot"
                        data-stat-type="number"
+                       data-chart-title="Other"
                        data-source-title="AGRIDS, 2018"
                        data-source-link="http://land.agrids.co.za/"></div>
                 </div>
                 <div class="column-half">
-                  <div id="chart-grouped_column-landsalescolour-landsalescolourtransactionpermonthbreakdownga"
+                  <div id="chart-column-landsalescolour-landsalescolourtransactionpermonthbreakdownga"
                        data-stat-type="number"
+                       data-chart-title="Government Agriculture"
                        data-source-title="AGRIDS, 2018"
                        data-source-link="http://land.agrids.co.za/"></div>
                 </div>
@@ -191,26 +195,30 @@
               <section class="clearfix stat-row">
                 <h2>Hectares(ha) traded for transaction of colour in 12 months for Government Agriculture, Government Urban, Private and Others</h2>
                 <div class="column-half">
-                  <div id="chart-grouped_column-landsalescolour-landsalescolourhectarespermonthbreakdowngu"
+                  <div id="chart-column-landsalescolour-landsalescolourhectarespermonthbreakdowngu"
                        data-stat-type="number"
+                       data-chart-title="Government Urban"
                        data-source-title="AGRIDS, 2018"
                        data-source-link="http://land.agrids.co.za/"></div>
                 </div>
                 <div class="column-half">
-                  <div id="chart-grouped_column-landsalescolour-landsalescolourhectarespermonthbreakdownpr"
+                  <div id="chart-column-landsalescolour-landsalescolourhectarespermonthbreakdownpr"
                        data-stat-type="number"
+                       data-chart-title="Private"
                        data-source-title="AGRIDS, 2018"
                        data-source-link="http://land.agrids.co.za/"></div>
                 </div>
                 <div class="column-half">
-                  <div id="chart-grouped_column-landsalescolour-landsalescolourhectarespermonthbreakdownot"
+                  <div id="chart-column-landsalescolour-landsalescolourhectarespermonthbreakdownot"
                        data-stat-type="number"
+                       data-chart-title="Other"
                        data-source-title="AGRIDS, 2018"
                        data-source-link="http://land.agrids.co.za/"></div>
                 </div>
                 <div class="column-half">
-                  <div id="chart-grouped_column-landsalescolour-landsalescolourhectarespermonthbreakdownga"
+                  <div id="chart-column-landsalescolour-landsalescolourhectarespermonthbreakdownga"
                        data-stat-type="number"
+                       data-chart-title="Government Agriculture"
                        data-source-title="AGRIDS, 2018"
                        data-source-link="http://land.agrids.co.za/"></div>
                 </div>
@@ -221,26 +229,30 @@
               <section class="clearfix stat-row">
                 <h2>Total cost in (R million) for transaction of colour in 12 months for Government Agriculture, Government Urban, Private and Others</h2>
                 <div class="column-half">
-                  <div id="chart-grouped_column-landsalescolour-landsalescolourcostpermonthbreakdowngu"
+                  <div id="chart-column-landsalescolour-landsalescolourcostpermonthbreakdowngu"
                        data-stat-type="number"
+                       data-chart-title="Government Urban"
                        data-source-title="AGRIDS, 2019"
                        data-source-link="http://land.agrids.co.za/"></div>
                 </div>
                 <div class="column-half">
-                  <div id="chart-grouped_column-landsalescolour-landsalescolourcostpermonthbreakdownpr"
+                  <div id="chart-column-landsalescolour-landsalescolourcostpermonthbreakdownpr"
                        data-stat-type="number"
+                       data-chart-title="Private"
                        data-source-title="AGRIDS, 2019"
                        data-source-link="http://land.agrids.co.za/"></div>
                 </div>
                 <div class="column-half">
-                  <div id="chart-grouped_column-landsalescolour-landsalescolourcostpermonthbreakdownot"
+                  <div id="chart-column-landsalescolour-landsalescolourcostpermonthbreakdownot"
                        data-stat-type="number"
+                       data-chart-title="Other"
                        data-source-title="AGRIDS, 2019"
                        data-source-link="http://land.agrids.co.za/"></div>
                 </div>
                 <div class="column-half">
-                  <div id="chart-grouped_column-landsalescolour-landsalescolourcostpermonthbreakdownga"
+                  <div id="chart-column-landsalescolour-landsalescolourcostpermonthbreakdownga"
                        data-stat-type="number"
+                       data-chart-title="Government Agriculture"
                        data-source-title="AGRIDS, 2019"
                        data-source-link="http://land.agrids.co.za/"></div>
                 </div>
@@ -254,10 +266,6 @@
           <div class="section-container">
             <h1 class="profile-detail-header">Individual Land Ownership of farms and agricultural holdings</h1>
             <section class="clearfix stat-row">
-              <div>
-                CBOs:Community-Based Organisations, includes non-governmental
-                organizations, churches, etc.
-              </div>
               <div class="column-half">
                 <div id="chart-histogram-farmland-private_land_ownership_in_hectares_per_category"
                      data-stat-type="scaled-percentage"
@@ -274,12 +282,11 @@
                      data-source-link="http://www.ruraldevelopment.gov.za/publications/land-audit-report/file/6126"></div>
               </div>
             </section>
+            <p>
+              CBOs:Community-Based Organisations, includes non-governmental
+              organizations, churches, etc.
+            </p>
             <section class="clearfix stat-row">
-              <div>
-                Co-ownership: Land owned by owners who are classified in different
-                categories e.g. land parcel co-owned by Individual(s) and a Trusts,
-                male and female, etc.
-              </div>
               <div class="column-half">
                 <div id="chart-pie-farmland-land_ownership_in_hectares_by_race"
                      data-stat-type="percentage"
@@ -297,6 +304,11 @@
                      data-source-link="http://www.ruraldevelopment.gov.za/publications/land-audit-report/file/6126"></div>
               </div>
             </section>
+            <p>
+              Co-ownership: Land owned by owners who are classified in different
+              categories e.g. land parcel co-owned by Individual(s) and a Trusts,
+              male and female, etc.
+            </p>
             <section class="clearfix stat-row">
               <div class="column-half">
                 <div id="chart-histogram-farmland-land_ownership_in_hectares_by_gender"
@@ -398,12 +410,12 @@
                      data-source-title="Land Audit Report, 2017"
                      data-source-link="http://www.ruraldevelopment.gov.za/publications/land-audit-report/file/6126"></div>
               </div>
-              <div>
-                Erven Land: legal term used in Namibia, South Africa and Swaziland
-                to describe a piece of
-                land registered in a deeds registry as an erf, lot, plot or stand.
-              </div>
             </section>
+            <p>
+              Erven Land: legal term used in Namibia, South Africa and Swaziland
+              to describe a piece of
+              land registered in a deeds registry as an erf, lot, plot or stand.
+            </p>
 
             <section class="clearfix stat-row">
               <div class="column-half">
@@ -422,15 +434,15 @@
                      data-source-title="Land Audit Report, 2017"
                      data-source-link="http://www.ruraldevelopment.gov.za/publications/land-audit-report/file/6126"></div>
               </div>
-              <div>
-                Erven includes every defined portion,
-                not intended to be a public place, of a piece of land laid out as
-                a
-                township,
-                whether or not it has been formally recognized, approved or
-                proclaimed as such.
-              </div>
             </section>
+            <p>
+              Erven includes every defined portion,
+              not intended to be a public place, of a piece of land laid out as
+              a
+              township,
+              whether or not it has been formally recognized, approved or
+              proclaimed as such.
+            </p>
 
             <section class="clearfix stat-row">
               <div class="column-half">
@@ -456,12 +468,12 @@
         <article id="sectional-title-land" class="clearfix">
           <div class="section-container">
             <h1 class="profile-detail-header">Sectional Title Land</h1>
-            <div>
+            <p>
               Sectional Title Land: Separate ownership of units or sections
               within
               a complex or
               development {{ sectionaltitleland.sectional_title_ownership_in_hectares_per_category.is_missing }}
-            </div>
+            </p>
             <section class="clearfix stat-row">
               <div class="column-half">
 
@@ -482,11 +494,6 @@
             </section>
 
             <section class="clearfix stat-row">
-              <div>
-                Trusts in terms of Trust Property Control Act, No 57 of 1988
-                <a href="http://www.justice.gov.za/legislation/acts/1988-57.pdf">the
-                  Trust Act</a>
-              </div>
               <div class="column-half">
                 <div id="chart-pie-sectionaltitleland-sectional_title_ownership_in_hectares_per_race"
                      data-stat-type="scaled-percentage"
@@ -504,6 +511,11 @@
                      data-source-link="http://www.ruraldevelopment.gov.za/publications/land-audit-report/file/6126"></div>
               </div>
             </section>
+            <p>
+              Trusts in terms of Trust Property Control Act, No 57 of 1988
+              <a href="http://www.justice.gov.za/legislation/acts/1988-57.pdf">the
+                Trust Act</a>
+              </p>
 
             <section class="clearfix stat-row">
               <div class="column-half">
@@ -551,14 +563,13 @@
             <section class="clearfix stat-row">
               <h2 class="header-for-columns"><a class="permalink"> Land
                 Redistribution Programme <i class="fa fa-link"></i></a></h2>
-              <div>
-                <br/>
+              <p>
                 Following centuries of colonial rule and decades of apartheid rule,
                 democratic South Africa set out to redistribute rights in land as a
                 way
                 to remedy past racial injustice and lay the basis for more equitable
                 development.
-              </div>
+              </p>
               <div class="column-third">
                 {% include 'profile/_blocks/_stat_list.html' with stat=redistributionandrestitution.hectarestransferredperprovincebyyear_stat stat_type='number' decimals="-2" %}
               </div>
@@ -671,12 +682,11 @@
             <section class="clearfix stat-row">
               <h2 class="header-for-columns"><a class="permalink"> Land Restitution
                 Programme <i class="fa fa-link"></i></a></h2>
-              <div>
-                <br/>
+              <p>
                 Restitution of Land Rights is to offer a solution to people who had
                 lost their land as a result of racially discriminatory practices
                 such as forced removals.
-              </div>
+              </p>
               <div class="column-third">
                 {% include 'profile/_blocks/_stat_list.html' with stat=redistributionandrestitution.hectaresacquiredrestitution_stat stat_type='number' decimals="-2" %}
               </div>
