Append profile tab for each article component

--- a/dominion/templates/profile/profile_detail.html
+++ b/dominion/templates/profile/profile_detail.html
@@ -767,7 +767,7 @@
         </article>
       {% endif %}
       {% if not afrobarometer.is_missing %}
-        <article>
+        <article id="afrobarometer">
           <div class="section-container">
             <h1 class="profile-detail-header">Afrobarometer Round 7</h1>
             <section class="clearfix stat-row">
